# makemonmouth.github.io

./: .gitignore  .pyspelling.yml  .wordlist.txt  CNAME  Gemfile  README.md  _config.yml  index.markdown  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: spelling.yml
_data/: navigation.yml  sitetext.yml
_includes/: contact.html  footer.html  head.html  nav.html
_layouts/: .head.html.swp  default.html
_portfolio/: core-membership.md  full-membership.md  member.md  part-time.md  supporter.md
_posts/: 2022-02-08-welcome-to-jekyll.markdown
_sass/base/: _mixins.scss
assets/css/: custom.css
