[tool.poetry]
name = "makemonmouth.github.io"
version = "0.1.0"
description = "The Make Monmouth Website"
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
license = "MIT-Modern-Variant"

[tool.poetry.dependencies]
python = "^3.10"
pyspelling = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
